Clearing Javascript and code issues

--- a/index.html
+++ b/index.html
@@ -9,42 +9,51 @@
 <body>
     <header>
         <h1>🍜 Ramen Rating App</h1>
-
     </header>
+
+    <section id="ramen-menu">
+        <img src="./images/gyukotsu.jpg" alt="Gyukotsu ramen">
+        <img src="./images/kojiro.jpg" alt="Kojiro Ramen">
+        <img src="./images/korean.jpg" alt="korean Ramen">
+        <img src="./images/naruto.jpg" alt="Naruto ramen">
+        <img src="./images/nirvana.jpg" alt="Nirvana ramen">
+        <img src="./images/shoyu.jpg" alt="Shoyu ramen">
+        <img src="./images/Miso.jpg" alt="Miso Ramen" >
+        <img src="./images/tonkotsu.jpg" alt="Tonkotsu Ramen" >
+    </section>
+
+    <section id="ramen-detail">
+        <h2 id="ramen-name"></h2>
+        <p id="ramen-restaurant"></p>
+        <img id="ramen-image" src="./images/Ichiraku-ramen.jpeg" alt="Ramen Image">
+        <p>Rating: <span id="ramen-rating"></span></p>
+        <p>Comment: <span id="ramen-comment"></span></p>
+        <button id="delete-btn">Delete Ramen</button>
+    </section>
+
+
     <section>
-        <section id ="ramen-menu">
+        <form id="new-ramen-form">
+            <input type="text" id="name" placeholder="Ramen Name" required>
+            <input type="text" id="restaurant" placeholder="Restaurant Name" required>
+            <input type="url" id="image" placeholder="Image URL" required>
+            <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="10" required>
+            <input type="text" id="comment" placeholder="Your Comment" required>
+            <button type="submit">Add Ramen</button>
+        </form>
+    </section>
 
-            <img src="./images/gyukotsu.jpg" alt="Gyukotsu ramen" srcset="">
-            <img src="./images/kojiro.jpg" alt="Kojiro Ramen" srcset="">
-            <img src="./images/korean spicy beef noodle ramen" alt="Korean spicy beef noodle ramen" srcset="">
-            <img src="./images/naruto.jpg" alt="Naruto ramen" srcset="">
-            <img src="./images/nirvana.jpg" alt="Nirvana ramen" srcset="">
-            <img src="./images/shoyu.jpg" alt="shoyu ramen" srcset="">
 
+    <section>
+        <form id="edit-form">
+            <input type="number" id="edit-rating" placeholder="New Rating (1-5)" min="1" max="5" required>
+            <input type="text" id="edit-comment" placeholder="Update Your Comment" required>
+            <button type="submit">Update Ramen</button>
+        </form>
+    </section>
 
-        </section>
-
-        <section id="ramen-detail">
-            <h2 id="ramen-name"></h2>
-            <p id="ramen-restaurant"></p>
-            <img id="ramen-image" src="./images/Ichiraku ramen.jpeg" alt="Ramen Image">
-            <p>Rating: <span id="ramen-rating"></span></p>
-            <p>Comment: <span id="ramen-comment"></span></p>
-        </section>
-        
-        <section>
-            <form id="new-ramen-form">
-                <input type="text" id="name" placeholder="Ramen Name" required>
-                <input type="text" id="restaurant" placeholder="Restaurant Name" required>
-                <input type="url" id="image" placeholder="Image URL" required>
-                <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="5" required>
-                <input type="text" id="comment" placeholder="Your Comment" required>
-                <button type="submit">Add Ramen</button>
-            </form>
-        </section>
-
-    </main>
     <footer> Copyright @ 2025</footer>
+
+    <script src="./js/app.js"></script>
 </body>
-<script src="index.js"></script>
 </html>
