Made final changes and added a README file

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     </header>
 
     <section id="ramen-menu">
-        <img src="./images/gyukotsu.jpg" alt="Gyukotsu ramen">
+        <!-- <img src="./images/gyukotsu.jpg" alt="Gyukotsu ramen">
         <img src="./images/kojiro.jpg" alt="Kojiro Ramen">
         <img src="./images/korean.jpg" alt="korean Ramen">
         <img src="./images/naruto.jpg" alt="Naruto ramen">
         <img src="./images/nirvana.jpg" alt="Nirvana ramen">
         <img src="./images/shoyu.jpg" alt="Shoyu ramen">
         <img src="./images/Miso.jpg" alt="Miso Ramen" >
-        <img src="./images/tonkotsu.jpg" alt="Tonkotsu Ramen" >
+        <img src="./images/tonkotsu.jpg" alt="Tonkotsu Ramen" > -->
     </section>
 
     <section id="ramen-detail">
@@ -37,7 +37,7 @@
             <input type="text" id="name" placeholder="Ramen Name" required>
             <input type="text" id="restaurant" placeholder="Restaurant Name" required>
             <input type="url" id="image" placeholder="Image URL" required>
-            <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="10" required>
+            <input type="number" id="rating" placeholder="Rating (1-10)" min="1" max="10" required>
             <input type="text" id="comment" placeholder="Your Comment" required>
             <button type="submit">Add Ramen</button>
         </form>
@@ -46,7 +46,7 @@
 
     <section>
         <form id="edit-form">
-            <input type="number" id="edit-rating" placeholder="New Rating (1-5)" min="1" max="5" required>
+            <input type="number" id="edit-rating" placeholder="New Rating (1-10)" min="1" max="10" required>
             <input type="text" id="edit-comment" placeholder="Update Your Comment" required>
             <button type="submit">Update Ramen</button>
         </form>
