--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </form>
     </section>
 
-    <footer> Copyright @ 2025</footer>
+    <footer> Copyright @ 2025 Made with ❤️ by Luckyantony Leshan</footer>
 
     <script src="./js/app.js"></script>
 </body>
